--- a/Gui/src/OsintTab/Osint.ui
+++ b/Gui/src/OsintTab/Osint.ui
@@ -55,7 +55,7 @@
      <item>
       <widget class="Line" name="line">
        <property name="styleSheet">
-        <string notr="true">background-color:rgb(82, 82, 82);</string>
+        <string notr="true"/>
        </property>
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
@@ -77,12 +77,7 @@
           </size>
          </property>
          <property name="styleSheet">
-          <string notr="true">border-style: solid;
-border-color: black;
-border-width: 1px;
-color: white;
-background-color:rgb(82, 82, 82);
-selection-background-color: qlineargradient(spread:pad, x1:0.5, y1:1, x2:0.5, y2:0, stop:0 rgba(77, 77, 77, 255), stop:0.7 rgba(143, 143, 107));</string>
+          <string notr="true"/>
          </property>
          <property name="frame">
           <bool>true</bool>
@@ -192,7 +187,7 @@ selection-background-color: qlineargradient(spread:pad, x1:0.5, y1:1, x2:0.5, y2
      <item>
       <widget class="Line" name="line_3">
        <property name="styleSheet">
-        <string notr="true">background-color:rgb(82, 82, 82);</string>
+        <string notr="true"/>
        </property>
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
@@ -212,7 +207,7 @@ selection-background-color: qlineargradient(spread:pad, x1:0.5, y1:1, x2:0.5, y2
         </sizepolicy>
        </property>
        <property name="styleSheet">
-        <string notr="true">background-color:rgb(82, 82, 82);</string>
+        <string notr="true"/>
        </property>
        <property name="frameShape">
         <enum>QFrame::Box</enum>
@@ -247,12 +242,7 @@ selection-background-color: qlineargradient(spread:pad, x1:0.5, y1:1, x2:0.5, y2
         <item>
          <widget class="QToolButton" name="toolButton_config">
           <property name="styleSheet">
-           <string notr="true">background-color: qlineargradient(spread:pad, x1:0.5, y1:1, x2:0.5, y2:0, stop:0 rgba(77, 77, 77, 255), stop:1 rgb(143, 143, 107));
-color: rgb(230,230,230);
-border-style: solid;
-border-color: rgb(50, 50, 50);
-border-width: 1px;
-border-radius: 15px</string>
+           <string notr="true"/>
           </property>
           <property name="text">
            <string>Config...</string>
@@ -299,12 +289,7 @@ border-radius: 15px</string>
            </font>
           </property>
           <property name="styleSheet">
-           <string notr="true">background-color: qlineargradient(spread:pad, x1:0.5, y1:1, x2:0.5, y2:0, stop:0 rgba(77, 77, 77, 255), stop:1 rgb(143, 143, 107));
-color: rgb(230,230,230);
-border-style: solid;
-border-color: rgb(50, 50, 50);
-border-width: 1px;
-border-radius: 15px</string>
+           <string notr="true"/>
           </property>
           <property name="text">
            <string>Keys...</string>
@@ -326,7 +311,7 @@ border-radius: 15px</string>
        <item>
         <layout class="QVBoxLayout" name="verticalLayout_3">
          <property name="spacing">
-          <number>5</number>
+          <number>6</number>
          </property>
          <item>
           <layout class="QHBoxLayout" name="horizontalLayout_7">
@@ -430,7 +415,7 @@ border-radius: 15px</string>
                 </widget>
                </item>
                <item>
-                <widget class="QLabel" name="label_subdomainsCount">
+                <widget class="QLabel" name="label_resultsCount">
                  <property name="sizePolicy">
                   <sizepolicy hsizetype="Preferred" vsizetype="Maximum">
                    <horstretch>0</horstretch>
@@ -456,7 +441,7 @@ border-radius: 15px</string>
                   </font>
                  </property>
                  <property name="styleSheet">
-                  <string notr="true">background-color:rgb(80, 80, 80);</string>
+                  <string notr="true"/>
                  </property>
                  <property name="frameShape">
                   <enum>QFrame::Box</enum>
@@ -498,7 +483,7 @@ border-radius: 15px</string>
                 <number>16</number>
                </property>
                <property name="editTriggers">
-                <set>QAbstractItemView::DoubleClicked</set>
+                <set>QAbstractItemView::NoEditTriggers</set>
                </property>
                <property name="tabKeyNavigation">
                 <bool>false</bool>
@@ -515,6 +500,12 @@ border-radius: 15px</string>
                <property name="selectionMode">
                 <enum>QAbstractItemView::ExtendedSelection</enum>
                </property>
+               <property name="verticalScrollMode">
+                <enum>QAbstractItemView::ScrollPerPixel</enum>
+               </property>
+               <property name="horizontalScrollMode">
+                <enum>QAbstractItemView::ScrollPerPixel</enum>
+               </property>
                <property name="showGrid">
                 <bool>false</bool>
                </property>
@@ -524,6 +515,9 @@ border-radius: 15px</string>
                <property name="cornerButtonEnabled">
                 <bool>false</bool>
                </property>
+               <attribute name="horizontalHeaderCascadingSectionResizes">
+                <bool>true</bool>
+               </attribute>
                <attribute name="horizontalHeaderMinimumSectionSize">
                 <number>200</number>
                </attribute>
@@ -531,6 +525,9 @@ border-radius: 15px</string>
                 <number>220</number>
                </attribute>
                <attribute name="horizontalHeaderShowSortIndicator" stdset="0">
+                <bool>true</bool>
+               </attribute>
+               <attribute name="horizontalHeaderStretchLastSection">
                 <bool>true</bool>
                </attribute>
                <attribute name="verticalHeaderVisible">
@@ -588,7 +585,7 @@ border-radius: 15px</string>
        <item>
         <widget class="Line" name="line_2">
          <property name="styleSheet">
-          <string notr="true">background-color:rgb(80, 80, 80);</string>
+          <string notr="true"/>
          </property>
          <property name="orientation">
           <enum>Qt::Vertical</enum>
@@ -602,7 +599,7 @@ border-radius: 15px</string>
        <item>
         <widget class="Line" name="line_5">
          <property name="styleSheet">
-          <string notr="true">background-color:rgb(80, 80, 80);</string>
+          <string notr="true"/>
          </property>
          <property name="orientation">
           <enum>Qt::Vertical</enum>
@@ -638,7 +635,7 @@ border-radius: 15px</string>
            <item>
             <widget class="Line" name="line_10">
              <property name="styleSheet">
-              <string notr="true">background-color:rgb(82, 82, 82);</string>
+              <string notr="true"/>
              </property>
              <property name="orientation">
               <enum>Qt::Horizontal</enum>
@@ -810,7 +807,7 @@ border-radius: 15px</string>
            <item>
             <widget class="Line" name="line_4">
              <property name="styleSheet">
-              <string notr="true">background-color:rgb(82, 82, 82);</string>
+              <string notr="true"/>
              </property>
              <property name="orientation">
               <enum>Qt::Horizontal</enum>
@@ -865,7 +862,7 @@ border-radius: 15px</string>
                   <enum>Qt::NoContextMenu</enum>
                  </property>
                  <property name="styleSheet">
-                  <string notr="true">background-color:rgb(82, 82, 82);</string>
+                  <string notr="true"/>
                  </property>
                  <property name="frameShape">
                   <enum>QFrame::StyledPanel</enum>
@@ -1162,7 +1159,7 @@ border-radius: 15px</string>
                   <enum>Qt::NoContextMenu</enum>
                  </property>
                  <property name="styleSheet">
-                  <string notr="true">background-color:rgb(82, 82, 82);</string>
+                  <string notr="true"/>
                  </property>
                  <property name="frameShape">
                   <enum>QFrame::StyledPanel</enum>
